--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ llama-index==0.12.0
 llama-index-core==0.12.0
 llama-index-llms-openai==0.3.0
 llama-index-embeddings-openai==0.3.0
-openai==1.54.0
+openai==1.57.0
+httpx==0.27.0
 python-dotenv==1.0.0
 pypdf==5.1.0
 tavily-python==0.5.0
@@ -13,3 +14,4 @@ fastapi==0.115.6
 uvicorn==0.32.1
 websockets==14.1
 numpy==1.26.4
+twilio==9.8.7
